# tools_feature

./: Data_aug.py  ImgPatch.py  PascalVOC2COCO.py  _init_paths.py  bounding_change2xml.py  class_augment_from_num.py  correctxml.py  cut_4_xml.py  cut_jpg_xml.py  deal_data.py  detect_make_xml.py  do_dir_feature.sh  imapge_patch_1.py  jiucuo_for_Patch_1.py  jiucuo_get_add_2.py  jiucuo_modify_xml_3.py  kongge.py  log.txt  make_xml.h  make_xml.sh  make_xml_from_feature.py  models_make_xml_from_feature.py  models_make_xml_from_feature.sh  modify_xml_name.py  noise.py  parse_tmp.py  patch_feature_choose.py  patch_feature_choose.sh  precision_xml_cmp.py  read_feature_comp.py  remove_anotation_from_skufile.py  retaote.py  rotate_90_&_xml.py  siamese_models_make_xml_from_feature.py  siamese_models_make_xml_from_feature.sh  siamse_patch_feature_choose.py  siamse_patch_feature_choose.sh  so_copy.py  sumClasses.py  test_claasify.py  (+3 more)
1detect_new/: CMakeLists.txt  main.cpp  make_rect.py  sensodyne4.0.txt  size.txt
1detect_new/cmake/: Dependencies.cmake  ProtoBuf.cmake
1detect_new/cmake/Modules/: FindOpenCV.cmake
1detect_new/gsk/: sh_run.txt
1detect_new/lib/: CMakeLists.txt  caffe_detect.cpp  caffe_detect.hpp  set_python.cpp  set_python.hpp
1detect_new/true/: 1.xml  10.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9.xml
convert_2_siamese/: CMakeLists.txt  convert_2_siamese.cpp  convert_2_siamese_train.cpp
convert_2_siamese/cmake/: Dependencies.cmake
convert_2_siamese/cmake/Modules/: FindLMDB.cmake  FindLevelDB.cmake  FindSnappy.cmake
evaluation/: evaluation.m
extract/: extract_feature.py  extract_prediction.sh
goods_similary/: CMakeLists.txt  main.cpp
goods_similary/cmake/: Dependencies.cmake
goods_similary/cmake/Modules/: FindOpenCV.cmake
goods_similary/lib/: CMakeLists.txt  caffe_detect.cpp  caffe_detect.hpp
goods_similary/test/: 00_blob_feature_.txt  01_blob_feature_.txt  10_blob_feature_.txt  1_feature_1.c++  test.txt
squeezenet_ssd/: VGG_VOC0712_SSD_600x600.sh  deploy.prototxt  solver.prototxt  squeezenet_ssd_voc_test.prototxt  squeezenet_ssd_voc_train.prototxt
